test/errors/expressions_error/zs/string_integer_concatenation_error.zs
package string_integer_concatenation_error;

struct StringIntegerConcatenationError
{
    int32  data;

    function string Wrong()
    {
        return "Some string " + data;
    }
};
